static/css/styles.css
html {
    min-height: 100%;
}

body, nav {
    color: white;
    background-image: linear-gradient(#4d4d4d, #272727);
    background-repeat: no-repeat;
}

.dropdown-menu {
    background-color: #313131;
}

.dropdown-item {
    color: rgba(255,255,255,.5);
    background-color: inherit;
}

.dropdown-item:hover {
    color: rgba(255,255,255,.75);
    background-color: #3d3d3d;
}

.active-item, .active-item:hover {
    color: white;
}

.container {
    background-color: #383838;
}

.left-container {
    text-align: left;
}

.right-container {
    text-align: right;
}

.card {
    background-color: #3f3f3f;
}

.btn-dark {
    background-color: #474747;
    border-color: #474747;
}

.btn-dark:hover {
    background-color: #555555;
    border-color: #555555;
}

.btn-dark:active, .btn-dark:focus {
    background-color: #343434!important;
    border-color: #343434!important;
}

table, th, td {
    border: 1px solid#242424;
  }

td, th {
    padding: 5px;
}

th {
    font-size: large;
}

.dropdown-menu.collapsing {
    display:block;
}

a.text-link {
    color: white;
    text-decoration: underline;
}

a.text-link:hover {
    color: #afafaf;
}

.dropdown .dropdown-menu {
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;

    max-height: 0;
    display: block;
    overflow: hidden;
    opacity: 0;
}

.dropdown.show .dropdown-menu { /* For Bootstrap 4, use .dropdown.show instead of .dropdown.open */
    max-height: 300px;
    opacity: 1;
}

